Rework and fix ExAssert core exception mechanism
Use RuntimeException instead of Exception